ggplot2 pipe operator aktuelisiert

--- a/10_ggplot2_intro.Rmd
+++ b/10_ggplot2_intro.Rmd
@@ -75,8 +75,8 @@ In den folgenden Abschnitten lernen wir daher wie weitere Bestandteile zum Plot 
 Wir schauen uns zum Start einfach mal für Deutschland den Verlauf des `gdpPercap` über die Zeit an.
 
 ```{r}
-gapminder %>%
-  filter(country == "Germany") %>% # auswählen der Daten 
+gapminder |> 
+  filter(country == "Germany") |>  # auswählen der Daten 
   ggplot(aes(x = year, y = gdpPercap)) +  # Plot initialisieren
   geom_point() # Punkte zum Darstellen der Daten verwenden
 
@@ -87,8 +87,8 @@ In dieser Grafik haben wir über `geom_point()` die Art des geometrischen Objekt
 
 
 ```{r}
-gapminder %>%
-  filter(country == "Germany") %>% 
+gapminder |> 
+  filter(country == "Germany") |>  
   ggplot(aes(x = year, y = gdpPercap)) +  
   geom_point(shape = 2) # shape auf festen Wert 2 gesetzt
 
