--- a/22_pakete.Rmd
+++ b/22_pakete.Rmd
@@ -198,16 +198,16 @@ in der DESCRIPTION Datei R Code verwendet werden um die nötigen Informationen
 
 Mit der Funktion `person()` können diese Informationen nun angegeben werden
 ```{}
-Authors@R: person(given = "Stephan", family = "Haug", 
-                  email = "haug@tum.de", 
+Authors@R: person(given = "Diana", family = "Conache", 
+                  email = "diana.conache@tum.de", 
                   role = c("cre", "aut"))
 ```
 
 Der Output von `person()` sieht dann folgendermaßen aus
 
 ```{r}
-person(given = "Stephan", family = "Haug", 
-                  email = "haug@tum.de", 
+person(given = "Diana", family = "Conache", 
+                  email = "diana.conache@tum.de", 
                   role = c("cre", "aut"))
 ```
 
